# serde-wasm-bindgen-typescript-example

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
