[package]
name = "serde-wasm-bindgen-typescript-example"
version = "0.1.0"
authors = ["Luka Zakrajšek <luka@bancek.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
tsify = "0.4.1"
wasm-bindgen = { version = "0.2.63" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
